--- a/Layouts/Level 3.xml
+++ b/Layouts/Level 3.xml
@@ -2207,6 +2207,28 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="catchDecal" uid="2366">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1355</x>
+                        <y>755</y>
+                        <z>0</z>
+                        <width>128</width>
+                        <height>108</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
@@ -2480,28 +2502,6 @@
                     <world>
                         <x>1652</x>
                         <y>2780</y>
-                        <z>0</z>
-                        <width>35</width>
-                        <height>105</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.502092063</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="spike" uid="2195">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>1089</x>
-                        <y>2757</y>
                         <z>0</z>
                         <width>35</width>
                         <height>105</height>
