made a list of stuff to do

--- a/Layouts/Level 1.xml
+++ b/Layouts/Level 1.xml
@@ -2326,6 +2326,28 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="smileyDecal" uid="280">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>3517</x>
+                        <y>706</y>
+                        <z>0</z>
+                        <width>141</width>
+                        <height>544</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.501449287</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
