--- a/Layouts/Level 2.xml
+++ b/Layouts/Level 2.xml
@@ -21637,6 +21637,28 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="spike" uid="349">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1820</x>
+                        <y>1750</y>
+                        <z>0</z>
+                        <width>70</width>
+                        <height>175</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.502092063</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
