--- a/Layouts/Level 1.xml
+++ b/Layouts/Level 1.xml
@@ -2277,6 +2277,18 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Bullet">
+                            <properties>
+                                <speed>400</speed>
+                                <acceleration>0</acceleration>
+                                <gravity>0</gravity>
+                                <bounce-off-solids>No</bounce-off-solids>
+                                <set-angle>Yes</set-angle>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
@@ -22034,8 +22046,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>3258</x>
-                        <y>695</y>
+                        <x>770</x>
+                        <y>210</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
@@ -22075,8 +22087,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>2985</x>
-                        <y>697</y>
+                        <x>2660</x>
+                        <y>700</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
@@ -22116,8 +22128,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>3037</x>
-                        <y>970</y>
+                        <x>2940</x>
+                        <y>980</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
@@ -22157,8 +22169,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>3120</x>
-                        <y>693</y>
+                        <x>2975</x>
+                        <y>1540</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
@@ -22198,8 +22210,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>3474</x>
-                        <y>1256</y>
+                        <x>3430</x>
+                        <y>1260</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
@@ -22239,8 +22251,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1753</x>
-                        <y>691</y>
+                        <x>1750</x>
+                        <y>700</y>
                         <z>0</z>
                         <width>105</width>
                         <height>150</height>
